<resources>
    <string name="app_name">DogGo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="title_activity_my_dogs">My Dogs</string>
    <string name="title_activity_add_dog">Add a New Dog</string>
    <string name="back">Go Back</string>
    <string name="name_set">Name:</string>
    <string name="dog_name_hint">Your Dog\'s Name</string>
    <string name="save_new_dog">Save New Dog</string>
    <string name="description_set">Description:</string>
    <string name="dog_description_hint">Tell us about your dog</string>
    <string name="walk_duration_setting">Walk Time:</string>
    <string name="walk_duration_units">minutes</string>
    <string name="walk_duration_default">30</string>
    <string name="walk_duration_description">Walk Time is how long your location will display before
        it times out. You always have the option to end your walk early, but we would recommend
        setting your Walk Time just shy of how long you usually walk for.</string>
    <string name="save_settings">Save Settings</string>
    <string name="delete_account_title">Want to remove your account from DogGo?</string>
    <string name="rules_title">Rules</string>
    <string name="delete_account">Delete Your Account</string>
    <string name="terms_of_use_title">Terms of Use</string>
    <string name="terms_of_use_text">DogGo features User Generated Content which may consist of
        photos and text. This agreement pertains to the rules and regulations of uploading content
        and the consequences of violating said rules.
    </string>
    <string name="acceptance_title">Acceptance</string>
    <string name="acceptance_text"><b>BY ACCESSING AND USING DOGGO, YOU ACCEPT AND AGREE TO BE BOUND
        TO THE TERMS AND PROVISION OF THIS AGREEMNT. ANY PARTICIPATION IN THIS SERVICE WILL
        CONSTITUTE ACCEPTANCE OF THIS AGREEMNT. IF YOU DO NOT AGREE TO ABIDE BY THE ABOVE, DO NOT
        USE DOGGO.</b>
    </string>
    <string name="ugc_definitions_title">User Generated Content Definitions</string>
    <string name="ugc_definitions_text">Dog Walkers (Walkers): Users of DogGo who broadcast their
        location. The intention is for Dog Walkers to find individuals to come meet and play with
        their dogs, but for this agreement, Dog Walkers will pertain to any individual who
        broadcasts their location.\n\n
        Dog Petters (Petters): Users of DogGo who receive the broadcasted locations of Dog Walkers.
        The intention is for Dog Petters to meet and play with the dogs of nearby active Dog
        Walkers, but for this agreement, Dog Petters will pertain to any individual who receives
        locations of other users through the app.\n\n
        Active Users: Any DogGo user who is currently using the app. This can mean the user has the
        app open and is either broadcasting or receiving location or the app is minimized and the
        user us broadcasting location. It does not mean a use who has the app installed but is not
        using it or a user who is using the app but is not broadcasting or receiving location.\n
        Dog Profile: Before a user can walk their dog they must complete a "Dog Profile". This is
        simply the combination of a photo of their dog, it's name, and a short description. The
        elements of this are the sole elements considered "User Generated Content" and while this
        agreement is directed toward their conduct, it shall also apply to any other User Generated
        Content on any related site, social media, or app.\n\n
        User Report: If a Dog Petter or Walker has deemed any User Generated Content from another
        Dog Walker inappropriate, offensive, graphic, or unsettling, they may file a report to mark
        that user for review. User reports may also be filed if a Dog Walker has appropriate User
        Generated Content but acts inappropriately during an interaction. This again will mark the
        user for review and lead to possible termination from the app.
    </string>
    <string name="ugc_rules_text">Photos: The photo must be primarily focused on a dog and contain
        no inappropriate content. Inappropriate content includes but it not limited to: sexually
        explicit images, anything that may depict, encourage, or incite violence or bullying, and
        anything that individuals may find offensive, graphic, or unsettling within reason.\n\n
        Text: All text, including dog name and description, must be clean, free from vulgar or
        offensive language, and must be friendly to Dog Petters. In completing the Dog Profile, the
        name field must be only the dog's name, and the description field must contain only relevant
        information about the dog that is being walked. If any information strays from these
        guidelines or if a user finds them to be offensive or inappropriate, the offending account
        may be terminated.
    </string>
    <string name="consequences_title">Consequences for Violating User Generated Content Rules
    </string>
    <string name="consequences_text">If a user deems a Dog Walker\'s content to be inappropriate and
        files a report, we then review that Dog Walker\'s content and determine the responding
        actions. If the content is deemed okay, the report will be removed and Dog Walker may
        continue to use the app. If the content only mildly breaks the rules, the Dog Walker will be
        notified and required to change their information before continuing to use the app. If the
        content is in major violation of the rules, we may fully terminate the Dog Walker\'s
        account. This would include deleting all stored personal information and User Generated
        Content.\n\n
        If a user deems the interaction they had with a Dog Walker inappropriate, we then review the
        report and depending on the severity may choose to terminate the account immediately, or
        notify the Dog Walker and keep a tally of the "strikes" they receive. Depending on the
        severity of repeated offenses we may terminate the account at any time, however termination
        is likely after 3 strikes of any kind to the account.
    </string>
    <string name="judgement_title">Judgment of Content</string>
    <string name="judgment_text">DogGo reserves the right to terminate any account for inappropriate
        content or conduct at any time and shall be the sole and final judgment of content quality.
        If a user\'s account is terminated for reasons involving their content or interactions, we
        will do our best to notify them but are neither obligated to nor responsible for doing so.
    </string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_text">We created DogGo to be a tool for college and university
        students to have access to the many benefits that come from having time to socialize with
        dogs as well as a tool for local dog owners to get their animals more time to socialize and
        play. In no way does the collection of user data contribute to this experience so we at
        DogGo try to do so as minimally as possible.
    </string>
    <string name="personal_info_title">What Personal Information We Collect</string>
    <string name="personal_info_text">The only personal information we collect is your email
        address. We also have access to which campus you are actively walking on as a Dog Walker,
        and any User Uploaded Content you provide.
    </string>
    <string name="info_use_title">How We Use the Information We Collect</string>
    <string name="info_use_text">Your email is used to tie any user uploaded content to your account
        so we can trace where user content comes from and some of the functionality of our app is
        contingent on tying users to their content. We do not share any user information with any
        third parties unless (1) you have given us your explicit permission to do so; (2) we are
        legally required to do so, for example, in response to a subpoena, court order, or other
        legal process; (3) it is necessary to protect our property rights related to DogGo. We may
        also share aggregate, non personal information with third parties if necessary.\n\n
        We also reserve the right to use any User Uploaded Content for marketing and presenting
        DogGo on social media or otherwise. In doing so we will not share any personal
        information.\n\n
        Your User Uploaded Content will also be available to other DogGo users while you are active
        on the app.
    </string>
    <string name="protection_title">How We Protect Your Information</string>
    <string name="protection_text">We exercise great care to protect your personal information. All
        information is stored securely, however we cannot ensure or warrant the security of any
        information you transmit to or receive from us. If you wish to stop using DogGo and for your
        information to be entirely removed from our database, follow the "Delete Account" protocol
        in the account settings. This will remove your email and all account information.
    </string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="info_accuracy_title">Information Accuracy and Liability</string>
    <string name="info_accuracy_text">The DogGo Android App and any affiliated apps, websites, and
        social media are offered for social and informational purposes only. DogGo, it\'s creators,
        and any affiliates shall not be responsible or liable for the accuracy, usefulness, or
        availability of any information transmitted or made available via the app or any related
        platforms, and shall not be responsible or liable for any error or omissions in that
        information.
    </string>
    <string name="advertising_title">Advertising</string>
    <string name="advertising_text">DogGo currently does not feature advertising or monetization of
        any sort. DogGo was created initially as a school project and later developed further as a
        passion project without any intention monetization. This being said, should user-ship grow
        and monetization become viable, we reserve the right to implement advertisements at any
        time.
    </string>
    <string name="termination_title">Termination</string>
    <string name="termination_text">DogGo requires users to create an account. We may terminate your
        account on DogGo at any time, with or without cause or notice, which may result in the
        forfeiture and destruction of all information associated with your account. All provisions
        of the Agreement that, by their nature, should survive termination, including, without
        limitation, ownership provisions, user uploaded content restrictions, and limitations of
        liability.
    </string>
    <string name="changes_title">Notification of Changes</string>
    <string name="changes_text">We reserve the right to change these conditions as we see fit and
        your continued use of DogGo will signify your acceptance of any adjustment to these terms.
        If there are any changes to our privacy policy, we will announce these changes in any app
        updates and on any related websites or social media. If there are any changes in how we use
        our users\' Personally Identifiable Information, notification by email will be made to those
        affected by the change. Any changes to our privacy policy will be posted 30 days prior to
        these changes taking place. You are therefore advised to re-read this statement on a regular
        basis.
    </string>
</resources>