<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="123dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/privacyPolicyTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_title"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/privacyPolicyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_text" />

            <TextView
                android:id="@+id/acceptanceTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acceptance_title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/acceptanceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acceptance_text" />

            <TextView
                android:id="@+id/personalInformationTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/personalInformationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_text" />

            <TextView
                android:id="@+id/informationUseTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_use_title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/informationUseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_use_text" />

            <TextView
                android:id="@+id/protectionTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/protection_title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/protectionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/protection_text" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>