<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    tools:context="com.kurtlemon.doggo.AddDogActivity">

    <ImageButton
        android:id="@+id/DogImageButton"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_columnSpan="2"
        android:layout_margin="20dp"
        android:elevation="0dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/DogNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/name_set" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dog_name_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:paddingLeft="10dp"
        android:text="@string/description_set" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:ems="10"
        android:hint="@string/dog_description_hint"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <Button
        android:id="@+id/SaveNewDogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="bottom"
        android:text="@string/save_new_dog" />

    <ProgressBar
        android:id="@+id/uploadProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        tools:visibility="invisible" />

</GridLayout>
